rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_points_vertical.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch001 = sketch(on = XY) {
  p0 = point(at = [var 3.99999999377mm, var 3.1mm])
  pf = point(at = [4, 4])
  vertical([p0, pf])
}
