rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_segments_symmetric_arcs.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  arc1 = arc(
    start = [
      var -14.709325777968067,
      var -0.00018226749634566106
    ],
    end = [
      var -10.00001514641278,
      var 4.895737726802866
    ],
    center = [
      var -9.979657542854158,
      var 0.1632890933735414
    ],
  )
  arc2 = arc(
    start = [
      var 5.1405337147416486,
      var 2.4297284741612706
    ],
    end = [
      var 11.815361328921169,
      var -3.765666812863416
    ],
    center = [
      var 9.3550848387798,
      var 0.27704565429683586
    ],
  )
  line1 = line(
    start = [
      var -0.25215575848887706,
      var -9.999986312918203
    ],
    end = [
      var -0.369826508507081,
      var 10.000034951708876
    ],
  )
  symmetric([arc1, arc2], axis = line1)
}
