rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_segments_tangent.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(
    start = [
      var 0.842365139680874,
      var 2.130191917478837
    ],
    end = [
      var 3.8158568925331315,
      var 3.263427139610342
    ],
  )
  arc1 = arc(
    start = [
      var 4.51442350298393,
      var 2.03289210268807
    ],
    end = [
      var 7.045679167266829,
      var 2.0249842034622896
    ],
    center = [
      var 5.781674511067142,
      var 2.548503865704063
    ],
  )
  tangent([line1, arc1])
}
