rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_three_points_coincident.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  point1 = point(at = [
    var 2.9999999999999996,
    var 3.9999999999999996
  ])
  point2 = point(at = [var 3, var 4])
  point3 = point(at = [
    var 3.0000000019999997,
    var 4.000000002
  ])
  coincident([point1, point2, point3])
}
