rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_two_points_coincident.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  point1 = point(at = [var 2.999999998, var 3.999999998])
  point2 = point(at = [3, 4])
  coincident([point1, point2])
}
